--- a/client/head.html
+++ b/client/head.html
@@ -1,11 +1,8 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Boardless Games</title>
-
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/latest/slate/bootstrap.min.css">
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.3/custom/phaser-no-physics.min.js"></script>
 </head>
