--- a/client/head.html
+++ b/client/head.html
@@ -4,5 +4,11 @@
 
   <title>Boardless Games</title>
 
+  <!--TODO Remove -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!--TODO Remove -->
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.3/custom/phaser-no-physics.min.js"></script>
 </head>
