--- a/client/head.html
+++ b/client/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-height, initial-scale=1">
 
   <title>Boardless Games</title>
 
