--- a/app/client/head.html
+++ b/app/client/head.html
@@ -1,7 +1,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
   <title>Boardless Games</title>
 
