--- a/app/client/head.html
+++ b/app/client/head.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.12/jquery.touchSwipe.min.js"></script>
 </head>
