--- a/app/client/head.html
+++ b/app/client/head.html
@@ -11,5 +11,5 @@
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.12/jquery.touchSwipe.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
 </head>
