--- a/app/client/head.html
+++ b/app/client/head.html
@@ -12,4 +12,5 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/Tocca.js/0.1.7/Tocca.min.js"></script>
 </head>
