--- a/app/client/head.html
+++ b/app/client/head.html
@@ -6,6 +6,7 @@
 
   <title>Boardless Games</title>
 
+  <!-- TODO remove -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 
@@ -13,4 +14,5 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/Tocca.js/0.1.7/Tocca.min.js"></script>
+  <!-- TODO remove -->
 </head>
