--- a/app/client/head.html
+++ b/app/client/head.html
@@ -6,11 +6,10 @@
 
   <title>Boardless Games</title>
 
-  <!-- TODO remove -->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/slate/bootstrap.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!-- TODO remove -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/Tocca.js/0.1.7/Tocca.min.js"></script>
