--- a/app/client/head.html
+++ b/app/client/head.html
@@ -6,12 +6,12 @@
 
   <title>Boardless Games</title>
 
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/slate/bootstrap.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/animate.min.css">
 
-  <!-- TODO remove -->
+  <!-- TODO remove
   <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll-probe.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/Tocca.js/0.1.7/Tocca.min.js"></script>
-  <!-- TODO remove -->
+   TODO remove -->
 </head>
