--- a/app/client/home/home.html
+++ b/app/client/home/home.html
@@ -1,21 +1,44 @@
 <template name="home">
   <h1 class="text-center">Boardless Games</h1>
 
-  <div class="input-group" style="width: 95%; padding-left: 5%">
-    <select class="form-control">
-      <option>
-        some
+  <div class="input-group" style="margin: 2%">
+    <select id="gameName" class="form-control">
+      <option value="love_letters">
+        Love Letters
       </option>
-      <option>
-        some22
+      <option value="the_resistance">
+        The Resistance
       </option>
     </select>
     <span class="input-group-btn">
-      <button class="btn btn-default" type="button">Create</button>
+      <button id="create" class="btn btn-default" type="button">Create</button>
     </span>
   </div>
 
   <div>
+    <!--TODO available games-->
+  </div>
 
+
+  <div id="createGameModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title text-center">Creating Game</h4>
+        </div>
+        <div class="modal-body">
+          <p>In order to create a game you need a username, please provide one</p>
+
+          <div class="form-group">
+            <label for="username" class="control-label">Username:</label>
+            <input type="text" class="form-control" id="username">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="loginAndCreate" class="btn btn-default" type="button">Create</button>
+          <button class="btn btn-default" data-dismiss="modal" type="button">Cancel</button>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
