--- a/app/client/home/home.html
+++ b/app/client/home/home.html
@@ -15,6 +15,8 @@
     </span>
   </div>
 
+  {{display}}
+
   <div class="text-center">
     {{#each this}} <!--todo boards-->
       <div class="board" style="margin: 10px">
